--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@chakra-ui/react": "^3.22.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "framer-motion": "^12.23.6",
+    "graphql": "^16.11.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "next": "15.4.1",
@@ -35,12 +37,15 @@
     "@storybook/nextjs": "^9.0.17",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/graphql-relay": "^0.7.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "cypress": "^14.5.2",
+    "dataloader": "^2.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "eslint-plugin-storybook": "^9.0.17",
