--- a/package.json
+++ b/package.json
@@ -70,12 +70,14 @@
     "eslint-config-next": "15.4.1",
     "eslint-plugin-storybook": "^9.0.17",
     "husky": "^9.1.7",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
     "lint-staged": "^16.1.2",
     "playwright": "^1.54.1",
     "prettier": "^3.6.2",
     "storybook": "^9.0.17",
+    "ts-jest": "^29.4.0",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5",
     "vitest": "^3.2.4"
